--- a/themes/kiss/layouts/_default/single.html
+++ b/themes/kiss/layouts/_default/single.html
@@ -13,6 +13,9 @@
     {{ partial "adsense" . }}
     {{ end }}
     <div class="content">
+      <div id="toc" class="toc well col-md-4 col-sm-6">
+      {{ .TableOfContents }}
+      </div>
       {{ .Content }}
       {{ if .Site.Params.Info.related }}
       <div class="related">{{ partial "related" . }}</div>
