--- a/themes/kiss/static/css/custom.css
+++ b/themes/kiss/static/css/custom.css
@@ -4,3 +4,25 @@ body{
 .container {
   max-width: 1200px;
 }
+.content h1{
+  font-weight: 400;
+}
+
+.content h1,
+.content h2,
+.content h3,
+.content h4,
+.content h5,
+.content h6 {
+  margin-top:  20px !important;
+  color: black;
+}
+.toc {
+  position: fixed;
+  top: 300px;
+  right: 0;
+}
+.toc ul {
+  margin-left: 0px;
+  list-style: none;
+}
