--- a/docs/css/custom.css
+++ b/docs/css/custom.css
@@ -5,8 +5,24 @@ body{
   max-width: 1200px;
 }
 .content h1{
-  margin-top: 20px;
-  color: black;
+  font-weight: 400;
 }
 
-
+.content h1,
+.content h2,
+.content h3,
+.content h4,
+.content h5,
+.content h6 {
+  margin-top:  20px !important;
+  color: black;
+}
+.toc {
+  position: fixed;
+  top: 300px;
+  right: 0;
+}
+.toc ul {
+  margin-left: 0px;
+  list-style: none;
+}
